syntax = "proto3";


option java_multiple_files = true;
option java_package = "com.r13a.devpr2025.grpc";
option java_outer_classname = "Rinha";
option objc_class_prefix = "HLW";


package com.r13a.devpr2025.grpc;

service PaymentService {
  rpc streamPayments (stream PaymentList) returns (stream PaymentList);
  rpc streamControls (stream ControlData) returns (stream ControlData);
}
 
message PaymentList {
  int32 size = 1;
  repeated PaymentData items = 2;
}

message PaymentData {
  string correlationId = 1;
  double amount = 2;
  string requestedAt = 3;
  int32 status = 4;
  int32 service = 5;
}

message ControlData {
  int32 statusA = 1;
  int32 reqTimeoutA = 2;
  int32 statusB = 3;
  int32 reqTimeoutB = 4;
  int32 observer = 5;
}
